# gg-cli

./: LICENSE  README.md  pyproject.toml
gg_cli/: __init__.py  config.py  git_ops.py  main.py  utils.py
gg_cli/commands/: base.py  commit_cmd.py  edit_cmd.py  flow_cmd.py  info_cmd.py  init_cmd.py  push_cmd.py
